# formative_mini

./: .gitignore  main.py  pyproject.toml  requirements.txt
classes/: admin.py  forms.py  models.py  urls.py  views.py
classes/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
templates/: base.html
templates/classes/: classroom_detail.html  classroom_students.html  join_classroom.html  student_dashboard.html  teacher_dashboard.html
templates/tests/: add_to_class.html  all_tests.html  assign_test.html  create_test.html  create_test_standalone.html  edit_question.html  edit_test.html  take_test.html  test_detail.html  test_results.html  test_stats.html
templates/users/: choose_role.html  login.html  register.html
tests/: admin.py  models.py  urls.py  views.py
tests/migrations/: 0001_initial.py  0002_initial.py  0003_test_assigned_to_all_testassignment.py  0004_alter_test_classroom.py  0005_test_created_by.py
tests/templatetags/: test_extras.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
